--- a/src/report/data_barang.jrxml
+++ b/src/report/data_barang.jrxml
@@ -64,6 +64,10 @@
 	<field name="tanggal" class="java.sql.Date">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
+	<field name="kategori" class="java.lang.String"/>
+	<variable name="kategori_1" class="java.lang.Integer" resetType="Column" calculation="Count">
+		<variableExpression><![CDATA[$F{kategori}]]></variableExpression>
+	</variable>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -97,6 +101,9 @@
 				</textElement>
 				<text><![CDATA[LAPORAN ]]></text>
 			</staticText>
+			<frame>
+				<reportElement x="100" y="32" width="114" height="20" uuid="a5bfb0d8-0e20-4dd5-a515-3288cb0395b8"/>
+			</frame>
 		</band>
 	</pageHeader>
 	<columnHeader>
@@ -139,7 +146,7 @@
 				<text><![CDATA[KODE BARANG]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="100" y="0" width="155" height="20" uuid="676d0f61-a824-4ba9-a9d1-733315e135ea"/>
+				<reportElement x="80" y="0" width="120" height="20" uuid="676d0f61-a824-4ba9-a9d1-733315e135ea"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
@@ -152,11 +159,25 @@
 				<reportElement x="355" y="0" width="100" height="20" uuid="6d513a4c-0198-4bec-97df-1a344d58bd74"/>
 			</frame>
 			<frame>
-				<reportElement x="0" y="0" width="100" height="20" uuid="70c5df30-35f9-4e3d-9556-fa5a23fa45b5"/>
+				<reportElement x="0" y="0" width="80" height="20" uuid="70c5df30-35f9-4e3d-9556-fa5a23fa45b5"/>
 			</frame>
 			<break>
 				<reportElement x="0" y="20" width="100" height="1" uuid="b7adf875-11f8-48fa-954d-d6fca8920c14"/>
 			</break>
+			<textField>
+				<reportElement x="74" y="0" width="71" height="20" uuid="157c17b5-3528-4430-b6d1-516a2bfd3242"/>
+				<textElement>
+					<font isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{kategori}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="184" y="1" width="100" height="20" uuid="2586a6a5-786a-4be0-95b9-a19421a040b5"/>
+				<textElement>
+					<font isBold="true"/>
+				</textElement>
+				<text><![CDATA[KATEGORI]]></text>
+			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
@@ -174,7 +195,7 @@
 			<frame>
 				<reportElement x="355" y="0" width="100" height="20" uuid="5a933b48-c9c8-41ba-8ebf-57dbaea11f57"/>
 				<textField>
-					<reportElement x="0" y="0" width="100" height="20" uuid="cf5ebbcd-fe74-4150-947f-3e909115dfaa"/>
+					<reportElement x="15" y="0" width="85" height="20" uuid="cf5ebbcd-fe74-4150-947f-3e909115dfaa"/>
 					<textElement textAlignment="Center">
 						<font fontName="Dialog" isBold="true"/>
 					</textElement>
@@ -194,19 +215,26 @@
 			<frame>
 				<reportElement x="100" y="0" width="155" height="20" uuid="487d99a8-307e-4d0b-9e17-260a594f69ad"/>
 				<textField>
-					<reportElement x="0" y="0" width="155" height="20" uuid="96d52108-bdb4-4748-9984-26dbb0f6b087"/>
-					<textElement textAlignment="Center">
-						<font fontName="Dialog" isBold="true"/>
+					<reportElement x="74" y="0" width="71" height="20" uuid="157c17b5-3528-4430-b6d1-516a2bfd3242"/>
+					<textElement>
+						<font isBold="true"/>
 					</textElement>
-					<textFieldExpression><![CDATA[$F{nama_barang}]]></textFieldExpression>
+					<textFieldExpression><![CDATA[$F{kategori}]]></textFieldExpression>
 				</textField>
 			</frame>
 			<textField>
-				<reportElement x="0" y="0" width="100" height="20" uuid="13cc836e-7d83-4729-8d4b-1160dc031a5c"/>
+				<reportElement x="0" y="0" width="70" height="20" uuid="13cc836e-7d83-4729-8d4b-1160dc031a5c"/>
 				<textElement textAlignment="Center">
 					<font fontName="Dialog" isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{kode_barang}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="90" y="0" width="84" height="20" uuid="96d52108-bdb4-4748-9984-26dbb0f6b087"/>
+				<textElement textAlignment="Center">
+					<font fontName="Dialog" isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{nama_barang}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
