--- a/src/strukNew/Struck_new.jrxml
+++ b/src/strukNew/Struck_new.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" language="groovy" pageWidth="141" pageHeight="3600" columnWidth="107" leftMargin="14" rightMargin="20" topMargin="0" bottomMargin="0" uuid="7fbca09c-a35f-46ff-ae0c-0b31fdadbb42">
 	<property name="ireport.zoom" value="3.215383215000004"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="495"/>
+	<property name="ireport.y" value="138"/>
 	<parameter name="uang" class="java.lang.String"/>
 	<parameter name="total" class="java.lang.String"/>
 	<parameter name="kembalian" class="java.lang.String"/>
@@ -84,27 +84,27 @@
 		<band splitType="Stretch"/>
 	</pageHeader>
 	<columnHeader>
-		<band height="64" splitType="Stretch">
-			<textField>
-				<reportElement x="57" y="31" width="49" height="20" uuid="8f669dc4-453e-493d-9d81-4f5f7aa15d22"/>
-				<textElement>
-					<font size="8"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$P{date}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="4" y="31" width="62" height="20" uuid="dda10cbc-d620-4a1f-91b4-0ed98de791e2"/>
-				<textElement>
-					<font size="8"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$P{tanggal}]]></textFieldExpression>
-			</textField>
+		<band height="82" splitType="Stretch">
 			<staticText>
-				<reportElement x="0" y="44" width="107" height="20" uuid="dca22905-b9ba-4a61-9d5b-e421d73a9589"/>
+				<reportElement x="0" y="62" width="107" height="20" uuid="dca22905-b9ba-4a61-9d5b-e421d73a9589"/>
 				<text><![CDATA[------------------------------------------------------------]]></text>
 			</staticText>
+			<textField pattern="dd/MM/yyyy HH.mm.ss">
+				<reportElement x="4" y="32" width="100" height="12" uuid="82b462dd-6569-4132-aefe-92751c6c46ad"/>
+				<textElement>
+					<font size="8"/>
+				</textElement>
+				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="1" y="47" width="37" height="15" uuid="5428f78c-4283-44f6-948b-3cab1c959be0"/>
+				<textElement textAlignment="Center">
+					<font size="8" isBold="false" isItalic="true"/>
+				</textElement>
+				<text><![CDATA[Nama : ]]></text>
+			</staticText>
 			<textField>
-				<reportElement x="4" y="0" width="100" height="20" uuid="47bdebad-9ea4-4e2c-bd2f-32a20cc60f46"/>
+				<reportElement x="0" y="2" width="68" height="15" uuid="47bdebad-9ea4-4e2c-bd2f-32a20cc60f46"/>
 				<textElement>
 					<font size="8"/>
 				</textElement>
@@ -167,6 +167,13 @@
 				</textElement>
 				<textFieldExpression><![CDATA[$F{catatan}]]></textFieldExpression>
 			</textField>
+			<staticText>
+				<reportElement x="-4" y="-65" width="47" height="15" uuid="c2c6c85e-1743-474f-b1ed-f3bc28dcc644"/>
+				<textElement textAlignment="Center">
+					<font size="8" isBold="false" isItalic="true"/>
+				</textElement>
+				<text><![CDATA[Kasir :]]></text>
+			</staticText>
 		</band>
 	</detail>
 	<columnFooter>
