--- a/src/master/formCRUDBarang.form
+++ b/src/master/formCRUDBarang.form
@@ -577,10 +577,8 @@
               <Font name="Tahoma" size="16" style="0"/>
             </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="3">
-                <StringItem index="0" value="Makanan"/>
-                <StringItem index="1" value="Minuman"/>
-                <StringItem index="2" value="Topping"/>
+              <StringArray count="1">
+                <StringItem index="0" value="..."/>
               </StringArray>
             </Property>
             <Property name="toolTipText" type="java.lang.String" value=""/>
