--- a/src/Report_new/laporan.jrxml
+++ b/src/Report_new/laporan.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" language="groovy" pageWidth="792" pageHeight="612" orientation="Landscape" columnWidth="752" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="91a14917-a4e8-4433-9e7f-2a1da4f5da4f">
-	<property name="ireport.zoom" value="1.0"/>
+	<property name="ireport.zoom" value="2.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="dataAwal" class="java.lang.String">
@@ -145,13 +145,21 @@ WHERE tgl_transaksi BETWEEN $P{dataAwal} AND $P{dataAkhir}]]>
 				</graphicElement>
 			</line>
 			<textField>
-				<reportElement x="558" y="31" width="100" height="20" uuid="6dfaf193-04af-408f-b94d-0c0954599c33"/>
+				<reportElement x="529" y="44" width="76" height="20" uuid="6dfaf193-04af-408f-b94d-0c0954599c33"/>
 				<textFieldExpression><![CDATA[$P{dataAwal}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="558" y="51" width="100" height="20" uuid="af55260c-77b3-4133-95e3-0ebb8f87cb84"/>
+				<reportElement x="675" y="44" width="76" height="20" uuid="af55260c-77b3-4133-95e3-0ebb8f87cb84"/>
 				<textFieldExpression><![CDATA[$P{dataAkhir}]]></textFieldExpression>
 			</textField>
+			<staticText>
+				<reportElement x="477" y="44" width="52" height="20" uuid="8e4a4739-6ac2-4c2c-89e6-1f310e68ef8d"/>
+				<text><![CDATA[Data Dari :]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="612" y="44" width="75" height="20" uuid="3368265a-860c-49fa-870b-f18bab42928c"/>
+				<text><![CDATA[Data Sampai :]]></text>
+			</staticText>
 		</band>
 	</pageHeader>
 	<columnHeader>
@@ -238,9 +246,9 @@ WHERE tgl_transaksi BETWEEN $P{dataAwal} AND $P{dataAkhir}]]>
 		<band height="45" splitType="Stretch"/>
 	</columnFooter>
 	<pageFooter>
-		<band height="54" splitType="Stretch"/>
+		<band splitType="Stretch"/>
 	</pageFooter>
 	<summary>
-		<band height="42" splitType="Stretch"/>
+		<band splitType="Stretch"/>
 	</summary>
 </jasperReport>
