--- a/src/login_new/sign_in.form
+++ b/src/login_new/sign_in.form
@@ -47,7 +47,7 @@
         <Container class="swing.PanelGradiente" name="panelGradiente1">
           <Properties>
             <Property name="colorPrimario" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="cc" green="cc" red="cc" type="rgb"/>
+              <Color blue="76" green="b1" red="ec" type="rgb"/>
             </Property>
             <Property name="colorSecundario" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="0" green="66" red="cc" type="rgb"/>
