--- a/src/master/akun_karyawan.form
+++ b/src/master/akun_karyawan.form
@@ -494,7 +494,7 @@
               <Color blue="0" green="66" red="cc" type="rgb"/>
             </Property>
             <Property name="colorSecundario" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="cc" green="cc" red="cc" type="rgb"/>
+              <Color blue="76" green="b1" red="ec" type="rgb"/>
             </Property>
           </Properties>
 
@@ -690,10 +690,10 @@
         <Container class="swing.PanelGradiente" name="panelGradiente1">
           <Properties>
             <Property name="colorPrimario" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="66" green="cc" red="ff" type="rgb"/>
+              <Color blue="0" green="66" red="cc" type="rgb"/>
             </Property>
             <Property name="colorSecundario" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="99" green="99" red="99" type="rgb"/>
+              <Color blue="76" green="b1" red="ec" type="rgb"/>
             </Property>
           </Properties>
 
